k8s/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: app
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
