k8s/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: app
spec:
  selector:
    app: prometheus
  ports:
  - port: 9090
    targetPort: 9090
  type: ClusterIP
